--- a/APPLI/EMPLOYEE/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/EMPLOYEE/EDIT/HTML/CONFIRM.HTML
@@ -16,8 +16,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>EMPLOYEE REGISTRY <span class="label label-info">Confirm</span></h1>
-		        <form action="/APP/EMPLOYEE/NEW/COMPLETE" method="POST">
+                <h1>EMPLOYEE EDIT<span class="label label-info">Confirm</span></h1>
+		        <form action="/APP/EMPLOYEE/EDIT/COMPLETE" method="POST">
                     <div class="form-group">
 			            <h3>
                             <span class="glyphicon glyphicon-user"></span>
