--- a/APPLI/EMPLOYEE/USERS/HTML/SHOW.HTML
+++ b/APPLI/EMPLOYEE/USERS/HTML/SHOW.HTML
@@ -46,11 +46,11 @@
 <!--RECORDS-->
                         </tbody>
                     </table>
-                    <input type="hidden" name="STATUS" value="COMPLETE" />
 
                     <div class="form-group">
 			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
                     </div>
+###PAGER###
 		        </form>
             </div>
         </div>
