--- a/HTML/PAGER.HTML
+++ b/HTML/PAGER.HTML
@@ -1,16 +1,16 @@
 <nav>
     <ul class="pagination">
-        <li>
+        <li class= "###PREV_ACTIVE###">
             <a href="###PREV_URL###" aria-label="Prev">
-                <span aria-hidden="###PREV_DISP###">«</span>
+                <span aria-hidden="">«</span>
             </a>
         </li>
 <!--PAGES-->
         <li class="%1"><a href="%2">%3</a></li>
 <!--PAGES-->
-        <li>
+        <li class="###NEXT_ACTIVE###">
             <a href="###NEXT_URL###" aria-label="Next">
-                <span aria-hidden="###NEXT_DISP###">»</span>
+                <span aria-hidden="">»</span>
             </a>
         </li>
     </ul>
