--- a/APPLI/EMPLOYEE/NEW/HTML/COMPLETE.HTML
+++ b/APPLI/EMPLOYEE/NEW/HTML/COMPLETE.HTML
@@ -41,10 +41,15 @@
 
 			        <input type="hidden" name="PASSWORD" value="###PASSWORD_VAUE###" />
 			        <input type="hidden" name="STATUS" value="COMPLETE" />
-
+	    		    <br />
+	    		    <br />
                     <div class="form-group">
-                        <a class="btn btn-default" href="/APP/EMPLOYEE/USERS/SHOW">一覧へ</a>
-                        <a class="btn btn-default" href="/">TOPへ</a>
+                        <a class="btn btn-default" href="/APP/EMPLOYEE/USERS/SHOW">
+		    	            <span class="glyphicon glyphicon-list"> LIST</span>
+                        </a>
+                        <a class="btn btn-default" href="/">
+		    	            <span class="glyphicon glyphicon-hand-up"> TOP</span>
+                        </a>
                     </div>
 		        </form>
             </div>
