--- a/APPLI/EMPLOYEE/NEW/HTML/INPUT.HTML
+++ b/APPLI/EMPLOYEE/NEW/HTML/INPUT.HTML
@@ -43,12 +43,12 @@
                         <input type="email" name="EMAIL" id="EMAIL" value="###EMAIL_VALUE###" class="form-control" />
                     </div>
                     <div class="form-group">
-		    	        <span class="glyphicon glyphicon-envelope"></span>
+		    	        <span class="glyphicon glyphicon-edit"></span>
 			            <span class="label label-default">PASSWORD</span>
                         <input type="password" name="PASSWORD" id="PASSWORD" value="###PASSWORD_VALUE###" class="form-control" />
                     </div>
                     <div class="form-group">
-		    	        <span class="glyphicon glyphicon-envelope"></span>
+		    	        <span class="glyphicon glyphicon-thumbs-up"></span>
 			            <span class="label label-default">PASSWORD CONFIRMATION</span>
                         <input type="password" name="PASSWORD_CONFIRMATION" id="PASSWORD_CONFIRMATION" value="###PASSWORD_CONFIRMATION_VALUE###" class="form-control" />
                     </div>
@@ -56,7 +56,9 @@
 			        <input type="hidden" name="STATUS" value="INPUT" />
 
                     <div class="form-group">
-			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
+			            <button type="submit" class="btn btn-primary btn-lg" />
+		    	            <span class="glyphicon glyphicon-eye-open">Chek!!</span>
+                        </button>
                     </div>
 		        </form>
             </div>
