--- a/APPLI/EMPLOYEE/NEW/HTML/CONFIRM.HTML
+++ b/APPLI/EMPLOYEE/NEW/HTML/CONFIRM.HTML
@@ -53,7 +53,9 @@
 			        <input type="hidden" name="STATUS" value="CONFIRM" />
 
                     <div class="form-group">
-			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
+			            <button type="submit" class="btn btn-primary btn-lg" />
+		    	            <span class="glyphicon glyphicon-plus">OK</span>
+                        </button>
                     </div>
 		        </form>
             </div>
