--- a/APPLI/EMPLOYEE/USERS/HTML/SHOW.HTML
+++ b/APPLI/EMPLOYEE/USERS/HTML/SHOW.HTML
@@ -42,14 +42,14 @@
                                 <td>
                                     <a class="btn btn-default" href="%12">EDIT</a>
                                 </td>
+                                <td>
+                                    <a class="btn btn-default" href="%13">DELETE</a>
+                                </td>
                             </tr>
 <!--RECORDS-->
                         </tbody>
                     </table>
 
-                    <div class="form-group">
-			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
-                    </div>
 ###PAGER###
 		        </form>
             </div>
