ログイン時にアカウントをセッション、EMPLOYEE/DELETE追加始め

--- a/APPLI/EMPLOYEE/USERS/HTML/SHOW.HTML
+++ b/APPLI/EMPLOYEE/USERS/HTML/SHOW.HTML
@@ -27,6 +27,7 @@
                                 <th>LAST NAME</th>
                                 <th>EMAIL</th>
                                 <th>EDIT</th>
+                                <th>DELETE</th>
                             </tr>
                         </thead>
                         <tbody>
