--- a/APPLI/EMPLOYEE/DELETE/HTML/_CONFIRM.HTML
+++ b/APPLI/EMPLOYEE/DELETE/HTML/_CONFIRM.HTML
@@ -16,26 +16,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>EMPLOYEE <span class="label label-success">Delete Complete</span></h1>
-                <h2>Deleted below employee record.<h2>
-		        <form action="/APP/EMPLOYEE/USERS/" method="GET">
-                    <div class="form-group">
-                        <span class="label label-danger ">
-                            下記の社員情報を削除しました。
-                        </span>
-                    </div>
-                    <div class="form-group">
-			            <h3>
-                            <span class="glyphicon glyphicon-user"></span>
-                            <span class="label label-default">###ID_LABEL###</span>
-                        </h3>
-                    </div>
-			        <br />
+                <h1>EMPLOYEE <span class="label label-info">Delete Confirm</span></h1>
+		        <form action="/APP/EMPLOYEE/DELETE/COMPLETE" method="POST">
                     <div class="form-group">
 			            <h3>
                             <span class="glyphicon glyphicon-user"></span>
                             <span class="label label-default">###FAMILY_NAME_LABEL###</span>
                         </h3>
+			            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" />
                     </div>
 			        <br />
                     <div class="form-group">
@@ -43,6 +31,7 @@
                             <span class="glyphicon glyphicon-user"></span>
 			                <span class="label label-default">###GIVEN_NAME_LABEL###</span>
 			            </h3>
+                        <input type="hidden" name="GIVEN_NAME" value="###GIVEN_NAME_VALUE###" />
                     </div>
 	    		    <br />
                     <div class="form-group">
@@ -50,13 +39,22 @@
                             <span class="glyphicon glyphicon-envelope"></span>
 			                <span class="label label-default">###EMAIL_LABEL###</span>
 			            </h3>
+                        <input type="hidden" name="EMAIL" value="###EMAIL_VALUE###" />
+                    </div>
+	    		    <br />
+                    <div class="form-group">
+		    	        <h3>
+                            <span class="glyphicon glyphicon-envelope"></span>
+			                <span class="label label-default">###PASSWORD_LABEL###</span>
+			            </h3>
+                        <input type="hidden" name="PASSWORD" value="###PASSWORD_VALUE###" />
                     </div>
 
-			        <input type="hidden" name="STATUS" value="COMPLETE" />
+			        <input type="hidden" name="STATUS" value="CONFIRM" />
+			        <input type="hidden" name="EMPLOYEE_ID" value="###EMPLOYEE_ID###" />
 
                     <div class="form-group">
-                        <a class="btn btn-default" href="/APP/EMPLOYEE/USERS/SHOW">一覧へ</a>
-                        <a class="btn btn-default" href="/">TOPへ</a>
+			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
                     </div>
 		        </form>
             </div>
