--- a/HTML/ERROR/SYSTEM_ERROR.HTML
+++ b/HTML/ERROR/SYSTEM_ERROR.HTML
@@ -15,12 +15,26 @@
     <body>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>SYSTEM ERROR <span class="label label-danger">管理者に報告願います。</span></h1>
+            <h1>SYSTEM ERROR </h1>
+            <h2><span class="label label-danger">管理者に報告願います。</span></h2>
 		        <form action="/APP/EMPLOYEE/NEW/CONFIRM" method="POST">
                     <div class="form-group">
+                        <h3>
+                        <br />
                         <span class="label label-danger ">###ERROR1_LABEL###</span>
+                        <br />
+                        <br />
                         <span class="label label-danger ">###ERROR2_LABEL###</span>
+                        <br />
+                        <br />
                         <span class="label label-danger ">###ERROR3_LABEL###</span>
+                        <br />
+                        <br />
+                        <span class="label label-danger ">###ERROR4_LABEL###</span>
+                        <br />
+                        <br />
+                        <span class="label label-danger ">###ERROR5_LABEL###</span>
+                        </h3>
                     </div>
                 </form>
             </div>
