セッションタイミングとTOPページの見直し

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
 
 // clearCookie("Times");
 // clearCookie("Date");
-//setCookie("ss_employee_session_id","kkkkk1dasd111");
+setCookie("ss_employee_session_id","kkkkk1dasd111");
 
 
 function setCookie(key, value) {
