EMPLOYEEの廃止、STUFFへの置換

--- a/HTML/INDEX.HTML
+++ b/HTML/INDEX.HTML
@@ -18,16 +18,16 @@
             <div class="col-md-6 col-md-offset-3">
                 <h1>SURESHOT SYSTEM </h1>
                 <h1><span class="label label-success">TOP</span></h1>
-		        <form action="/APP/EMPLOYEE/USERS/" method="GET">
+		        <form action="/APP/STUFF/USERS/" method="GET">
                    <div class="form-group">
-                        <a class="btn btn-default" href="/APP/EMPLOYEE/NEW/INPUT">
+                        <a class="btn btn-default" href="/APP/STUFF/NEW/INPUT">
 		    	            <span class="glyphicon glyphicon-list">SIGN UP</span>
                         </a>
-                        <a class="btn btn-default" href="/APP/EMPLOYEE/SIGNIN/INPUT">
+                        <a class="btn btn-default" href="/APP/STUFF/SIGNIN/INPUT">
 		    	            <span class="glyphicon glyphicon-list">SIGN IN</span>
                         </a>
-                        <a class="btn btn-default" href="/APP/EMPLOYEE/USERS/SHOW">
-		    	            <span class="glyphicon glyphicon-list">EMPLOYEE LIST</span>
+                        <a class="btn btn-default" href="/APP/STUFF/USERS/SHOW">
+		    	            <span class="glyphicon glyphicon-list">STUFF LIST</span>
                         </a>
                         <a class="btn btn-default" href="/">
 		    	            <span class="glyphicon glyphicon-hand-up"> TOP</span>
