--- a/HTML/ERROR/SYSTEM_ERROR.HTML
+++ b/HTML/ERROR/SYSTEM_ERROR.HTML
@@ -17,7 +17,7 @@
             <div class="col-md-6 col-md-offset-3">
             <h1>SYSTEM ERROR </h1>
             <h2><span class="label label-danger">管理者に報告願います。</span></h2>
-		        <form action="/APP/EMPLOYEE/NEW/CONFIRM" method="POST">
+		        <form action="/APP/STUFF/NEW/CONFIRM" method="POST">
                     <div class="form-group">
                         <h3>
                         <br />
