--- a/HTML/HEAD.HTML
+++ b/HTML/HEAD.HTML
@@ -5,7 +5,7 @@
 
 // clearCookie("Times");
 // clearCookie("Date");
-//setCookie("ss_employee_session_id","kkkkk1dasd111");
+//setCookie("sureshot_stuff_session_id","kkkkk1dasd111");
 
 
 function setCookie(key, value) {
