--- a/HTML/MAIN.HTML
+++ b/HTML/MAIN.HTML
@@ -5,7 +5,7 @@
 
 // clearCookie("Times");
 // clearCookie("Date");
-//setCookie("ss_employee_session_id","kkkkk1dasd111");
+//setCookie("sureshot_stuff_session_id","kkkkk1dasd111");
 
 
 function setCookie(key, value) {
@@ -37,7 +37,7 @@ This page on AWS for SURE SHOT SYSTEM PROJECT Development!!
 Hello Takuya Aikawa!!
 Now On Big Delelopment!!!
 Caming Soon FirstModel!!!
-<a href="/APPLI/EMPLOYEE/USERS/SHOW">
+<a href="/APPLI/STUFF/USERS/SHOW">
 ###PAGER###
 </body>
 </html>
