データ保持方法の変更。LV2,LV3も個別ファイルへ。

--- a/APPLI/STUFF/DELETE/HTML/COMPLETE.HTML
+++ b/APPLI/STUFF/DELETE/HTML/COMPLETE.HTML
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Sureshot employee registry confirm</title>
+		<title>Sureshot stuff registry confirm</title>
         <!-- BootstrapのCSS読み込み -->
         <link href="/BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
         <!-- jQuery読み込み -->
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h1>STUFF <span class="label label-success">Delete Complete</span></h1>
-                <h2>Deleted below employee record.<h2>
+                <h2>Deleted below stuff record.<h2>
 		        <form action="/APP/STUFF/USERS/" method="GET">
                     <div class="form-group">
                         <span class="label label-danger ">
