--- a/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
@@ -19,6 +19,14 @@
                 <h1>STUFF EDIT<span class="label label-info">Confirm</span></h1>
 		        <form action="/APP/STUFF/EDIT/COMPLETE" method="POST">
                     <div class="form-group">
+			            <h2>
+                            <span class="glyphicon glyphicon-user"></span>
+                            <span class="label label-default">###STUFF_ID_NOT_MATCH###</span>
+                        </h2>
+                    </div>
+			        <br />
+
+                    <div class="form-group">
 			            <h3>
                             <span class="glyphicon glyphicon-user"></span>
                             <span class="label label-default">###FAMILY_NAME_LABEL###</span>
