--- a/HTML/INDEX.HTML
+++ b/HTML/INDEX.HTML
@@ -18,7 +18,10 @@
             <div class="col-md-6 col-md-offset-3">
                 <h1>SURESHOT SYSTEM </h1>
                 <h1><span class="label label-success">TOP</span></h1>
-		        <form action="/APP/STUFF/USERS/" method="GET">
+                <div>
+                    <img src="/IMG/sureshot_05.jpg" > 
+		        </div>
+                <form action="/APP/STUFF/USERS/" method="GET">
                    <div class="form-group">
                         <a class="btn btn-default" href="/APP/STUFF/NEW/INPUT">
 		    	            <span class="glyphicon glyphicon-list">SIGN UP</span>
