--- a/APPLI/STUFF/USERS/HTML/SHOW.HTML
+++ b/APPLI/STUFF/USERS/HTML/SHOW.HTML
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Sureshot stuff registry confirm</title>
-        <!-- BootstrapのCSS読み込み -->
-        <link href="/BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
-        <!-- jQuery読み込み -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <!-- BootstrapのJS読み込み -->
-        <script src="/BOOTSTRAP/js/bootstrap.min.js"></script>
-	</head>
+<!--<!DOCTYPE html>-->
+<!--<html>-->
     <body>
     <div class="container">
         <div class="row">
@@ -57,5 +45,5 @@
         </div>
     </div>
 	</body>
-</html>
+<!--</html>-->
 
