--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -1,46 +1,52 @@
-<!DOCTYPE html>
-<html>
-	<head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Sureshot stuff registry input</title>
-        <!-- BootstrapのCSS読み込み -->
-        <link href="/BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
-        <!-- jQuery読み込み -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <!-- BootstrapのJS読み込み -->
-        <script src="/BOOTSTRAP/js/bootstrap.min.js"></script>
-	</head>
+<!--
+
+
+--!>
     <body>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF SIGN IN <span class="label label-default">AUTH</span></h1>
-		        <form action="/APP/STUFF/SIGNIN/AUTH" method="POST">
-                    <div class="form-group">
-                        <span class="label label-danger ###AUTH_ERR###">ID or Password was incomplete.</span>
-                    </div>
-                    <div class="form-group">
-			            <span class="glyphicon glyphicon-user"></span>
-                        <span class="label label-default">ID(EMAIL)</span>
-			            <input type="text" name="ID" value="###ID_VALUE###" class="form-control" />
-                    </div>
-			        <br />
-                    <div class="form-group">
-			            <span class="glyphicon glyphicon-user"></span>
-			            <span class="label label-default">PASSWORD</span>
-    			        <input type="password" name="PASSWORD" value="###PASSWORD_VALUE###" class="form-control"/>
-                    </div>
-	    		    <br />
-
-			        <input type="hidden" name="STATUS" value="SIGNIN" />
-
-                    <div class="form-group">
-			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
-                    </div>
-		        </form>
+        <div class="container" style="margin-bottom:15px;">
+            <div class="row">
+                <h1 class="">
+                    <p>STUFF  <span class="label label-default">SIGN IN</span></p>
+                </h1>
             </div>
         </div>
+        <div class="container" style="margin-bottom:15px;">
+            <div class="row">
+                <h4>
+                    <p><span class="label label-lg label-###INFO_LV###">###AUTH_MSG###</span></p>
+                </h4>
+            </div>
+        </div>
+
+        <div class="container" style="padding;20px;">
+		        <form class="form-horizontal" style="margin-bottom:15px;" action="/APP/STUFF/SIGNIN/AUTH" method="POST">
+                    <!--
+                    <div class="form-group"> 
+                        <div class="row">
+                            <div class="col-sm-2" style="background:pink">1</div>
+                            <div class="col-sm-4" style="background:red">2</div>
+                            <div class="col-sm-6" style="background:black">3</div>
+                        </div>
+                    </div>
+                    -->
+                    <div class="form-group">
+                        <h3><label class="control-label col-sm-1" for="ID" style="background:pink;"><i class="glyphicon glyphicon-envelope"></i></label></h3>
+                        <div class="col-sm-4">
+			                <input type="email" id="ID" name="ID" value="###ID_VALUE###" class="form-control" style="background:blue;" placeholder="ID(Email)" >
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+			            <h3><label class="control-label col-sm-1" for="PASSWORD"><i class="glyphicon glyphicon-pencil"></i></label></h3>
+                        <div class="col-sm-4">
+    			            <input type="password" id="PASSWORD" name="PASSWORD" value="###PASSWORD_VALUE###" class="form-control" placeholder="PASSWORD">
+                        </div>
+                        <div class="col-sm-4">
+			                <input type="submit" name="SUBMIT" value="AUTH" class="btn btn-primary btn-md" />
+                        </div>
+                    </div>
+			        <input type="hidden" name="STATUS" value="SIGNIN" />
+		        </form>
+        </div>
 	</body>
-</html>
 
