--- a/HTML/HEAD.HTML
+++ b/HTML/HEAD.HTML
@@ -2,14 +2,24 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Sureshot stuff registry confirm</title>
-        <!-- CSS読み込み -->
-        <link href="/LAYOUT/CSS/common.css" rel="stylesheet">
+				<title>Sureshot System</title>
         <!-- BootstrapのCSS読み込み -->
         <link href="/BOOTSTRAP/css/bootstrap.min.css" rel="stylesheet">
+        <!-- CSS読み込み -->
+        <link href="/LAYOUT/CSS/common.css" rel="stylesheet">
         <!-- jQuery読み込み -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script type="text/javascript" src="/JS/jquery.js"></script>
         <!-- BootstrapのJS読み込み -->
         <script src="/BOOTSTRAP/js/bootstrap.min.js"></script>
-	</head>
+        <script type="text/javascript" charset="UTF-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" charset="UTF-8" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+				<!--SIDE MENU-->
+				<link rel="stylesheet" type="text/css" href="/LAYOUT/SIDE_MENU/css/default.css" />
+				<link rel="stylesheet" type="text/css" href="/LAYOUT/SIDE_MENU/css/component.css" />
+				<script src="/LAYOUT/SIDE_MENU/js/modernizr.custom.js"></script>
+
+				<!--HALF SLIDER-->
+				<link href="/LAYOUT/HALF_SLIDER/css/half-slider.css" rel="stylesheet">
+	</head>
