--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -1,22 +1,46 @@
     <!--LEFT SIDE MENU-->
     <div class="col-md-3">
-      <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1" style="margin-top:10px;">
+        <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1" style="margin-top:10px;">
 
-      <div class="scrollable-menu">
-        <h3></h3>
-        <h3>Menu</h3>
-  			<a href="#">Celery seakale</a>
-  			<a href="#">Dulse daikon</a>
-  			<a href="#">Zucchini garlic</a>
-  			<a href="#">Catsear azuki bean</a>
-  			<a href="#">Dandelion bunya</a>
-  			<a href="#">Rutabaga</a>
-        <a href="#">QQQQQQQ</a>
-        <a href="#">QQQQQQQ</a>
-        <a href="#">QQQQQQQ</a>
-        <a href="#"></a>
-        <a href="#"></a>
-      </div>
+            <div class="scrollable-menu">
+                <h3></h3>
+                <h3>Menu</h3>
+  			    <a class="###HIDDEN###" href="/APP/STUFF/SIGNIN/INPUT">
+                    <i class="glyphicon glyphicon-log-in"> Sign-in</i>
+                </a>
+    			<a class="###HIDDEN###" href="/APP/STUFF/SIGNIN/OUT">
+                    <i class="glyphicon glyphicon-log-out"> Sign-out</i>
+                </a>
+    			<a href="/APP/STUFF/NEW/INPUT">
+                    <i class="glyphicon glyphicon-edit"> Sign-up</i>
+                </a>
+    			<a href="/APP/STUFF/USERS/SHOW">
+                    <i class="glyphicon glyphicon-user"> Stuff</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-eye-open"> 査定</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-thumbs-up"> 受入</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-th"> 在庫</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-stats"> 売上</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-book"> 顧客</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-wrench"> JOB</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-cog"> 設定</i>
+                </a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </div>
 
   		</nav>
     </div>
