--- a/HTML/NAVBAR.HTML
+++ b/HTML/NAVBAR.HTML
@@ -2,18 +2,22 @@
         <!--navbar-->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                 <a class="navbar-brand" href="#">
-                 </a>
-             </div>
+                <a class="navbar-brand" href="#">
+                </a>
+            </div>
 
-             <ul class="nav navbar-nav">
-             </ul>
-             <ul class="nav navbar-nav navbar-right" style="margin-right:10px;">
-               <li class=""><a id="showLeft" href="#">Menu6</a></li>
-             </ul>
-             <!--
-             <ul class="nav navbar-nav navbar-right" style="margin-right:50px;">
-               <li class=""><a id="showLeftPush" href="#">Menu7</a></li>
-             </ul>
-           -->
-         </nav>
+            <ul class="nav navbar-nav">
+            </ul>
+            <ul class="nav navbar-nav navbar-right" style="margin-right:10px;">
+                <li class="">
+                    <a id="showLeft" href="#">
+                        <i class="glyphicon glyphicon-menu-hamburger"></i>
+                    </a>
+                </li>
+            </ul>
+        <!--
+            <ul class="nav navbar-nav navbar-right" style="margin-right:50px;">
+                <li class=""><a id="showLeftPush" href="#">Menu7</a></li>
+            </ul>
+        -->
+        </nav>
