--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -35,11 +35,20 @@
     			<a href="#">
                     <i class="glyphicon glyphicon-wrench"> JOB</i>
                 </a>
-    			<a href="#">
-                    <i class="glyphicon glyphicon-cog"> 設定</i>
-                </a>
+                <div class="dropdown">
+                    <a href="#" data-toggle="collapse" aria-haspopup="true">
+                        <i class="glyphicon glyphicon-cog"> マスタ</i><span class="caret"></sapn>
+                    </a>
+                    <ul id="collapse-master" class="collapse">
+                        <li><a href="#">作業リスト</a></li>
+                        <li><a href="#">部品リスト</a></li>
+                        <li><a href="#">作業カテゴリー</a></li>
+                        <li><a href="#">部品カテゴリー</a></li>
+                    </ul>
+                </div>
+                <!--
                 <a href="#"></a>
-                <a href="#"></a>
+                -->
             </div>
 
   		</nav>
