PARTS Mater sample creating...

--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -35,6 +35,7 @@
     			<a href="#">
                     <i class="glyphicon glyphicon-wrench"> JOB</i>
                 </a>
+                <!--
                 <div class="dropdown">
                     <a href="#" data-toggle="collapse" aria-haspopup="true">
                         <i class="glyphicon glyphicon-cog"> マスタ</i><span class="caret"></sapn>
@@ -46,6 +47,19 @@
                         <li><a href="#">部品カテゴリー</a></li>
                     </ul>
                 </div>
+                -->
+    			<a href="#">
+                    <i class="glyphicon glyphicon-wrench"> master ope cate</i>
+                </a>
+    			<a href="#">
+                    <i class="glyphicon glyphicon-wrench"> master ope list</i>
+                </a>
+    			<a href="/APP/PARTS_CATEGORY/LISTS/SHOW">
+                    <i class="glyphicon glyphicon-wrench"> master parts cate</i>
+                </a>
+    			<a href="/APP/PARTS_LIST/LISTS/SHOW">
+                    <i class="glyphicon glyphicon-wrench"> master parts list</i>
+                </a>
                 <!--
                 <a href="#"></a>
                 -->
