--- a/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
@@ -1,49 +1,179 @@
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-    <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF <span class="label label-success"></span></h1>
-		        <form action="/APP/STUFF/USERS/" method="GET">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>STUFF NO</th>
-                                <th>FIRST NAME</th>
-                                <th>LAST NAME</th>
-                                <th>EMAIL</th>
-                                <th>EDIT</th>
-                                <th>DELETE</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-<!--RECORDS-->
-                            <tr>
-                                <td>%1</td>
-                                <td>
-                                    <a class="btn btn-default" href="%11">%2</a>
-                                </td>
-                                <td>%3</td>
-                                <td>%4</td>
-                                <td>%5</td>
-                                <td>
-                                    <a class="btn btn-default" href="%12">EDIT</a>
-                                </td>
-                                <td>
-                                    <a class="btn btn-default" href="%13">DELETE</a>
-                                </td>
-                            </tr>
-<!--RECORDS-->
-                        </tbody>
-                    </table>
+<!--PARTS LISTS Contents-->
+    
+    <div class="col-md-9">
 
-###PAGER###
-		        </form>
+         <!--Contents Header Title-->
+        <div class="container" style="margin-bottom:15px;">
+            <div class="row">
+                <h1 class="">
+                    <p>Parts Lists</p>
+                </h1>
             </div>
         </div>
+
+        <!--Contents Header Information-->
+        <div class="container" style="margin-bottom:15px;">
+            <div class="row">
+                <form class="form-horizontal header-info">
+                    <div class="form-group">
+                        <h3>
+                            <label class="control-label col-sm-1" for="">
+                                <i class="glyphicon glyphicon-info-sign"></i>
+                            </label>
+                        </h3>
+                        <h4>
+                            <div class="col-sm-5" style="text-align:left;">
+                                <p><span id="info-msg" class="label label-lg label-###INFO_LV###">###INFO_MSG###</span></p>
+                            </div>
+                        </h4>
+                        <div class="btn-group">
+                             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="parts_category" aria-expended="false">
+                                 Part Category <span class="caret"></span>
+                             </button>
+                             <ul class="dropdown-menu" role="menu" name="PAGE">
+                                <li name="PARTS_CATEGORY_PAGE">
+                                    <a id="cat-list-0" onclick="categoryChoice(0,this); return false;" >ALL</a>
+                                </li>
+                             ###PARTS_CATEGORY###
+                             </ul>
+                            <input type="text" name="PARTS_CATEGORY_NAME_PAGE" id="PARTS_CATEGORY_NAME_PAGE" value="" class="form-control" disabled />
+                            <input type="hidden" name="PARTS_CATEGORY_NAME_HIDDEN_PAGE" id="PARTS_CATEGORY_NAME_HIDDEN_PAGE" value="" class="form-control" />
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <!--Contents-->
+        <div class="container" style="padding;20px;">
+            <form class="form-inline form-horizontal" style="margin-bottom:15px;" action="/APP/PARTS_CATEGORY/LISTS/SHOW" method="GET">
+###TABLE###
+            </form>
+        </div>
     </div>
-	</body>
 <!--</html>-->
 
+<script>
+
+    //カテゴリを選択
+    /* 
+        jQueryバージョン問題により、ajaxで要素追加後にイベント(.on記述も無効)が
+        発火しない事象により、個別のJSへ切り替え
+        →時間のあるときに出来ればリファクタリングしたい点
+        jQuery(function () {
+            $(".dropdown-menu li a").click(function() {
+                console.log($(this).html());
+                $(this).parents('.form-group').find('[name^="PARTS_CATEGORY_NAME_"]').val($(this).html());
+            });
+        });
+    */
+    function categoryChoice(id,obj) {
+
+        //選択したカテゴリ名
+        var e = document.getElementById("cat-list-" + id);
+        var choice = e.innerHTML;
+
+        //親の親(ulタグのnameにParts_noが指定されている、これを取得
+        var pe = obj.parentNode;
+        var ppe = pe.parentNode;
+        var nodes = ppe.attributes;
+        var parts_no = nodes.name.nodeValue;
+
+        //該当のtextとhiddenのinputに選択したカテゴリ名を設定
+        var input_text = document.getElementById('PARTS_CATEGORY_NAME_' + parts_no);
+        input_text.value = choice;
+        var input_hidden = document.getElementById('PARTS_CATEGORY_NAME_HIDDEN_' + parts_no);
+        input_hidden.value = choice;
+
+        //PageFilterのカテゴリを選択した場合
+        if (parts_no == 'PAGE') {
+            pageFilter();
+        }
+    }
+
+    //絞り込み
+    function pageFilter(choice) {
+        var params = $('form').serialize();
+        var jqXHR = $.ajax({
+            type: 'POST',
+            url: '/APP/PARTS_LIST/LISTS/SHOW',
+            data: params
+        });
+        jqXHR.done(function(data) {
+            $('table').html(data);
+        });
+        jqXHR.fail(function(data) {
+            alert("新規登録処理に失敗しました。");
+        });
+    }
+
+    //パーツ新規追加
+    function newParts() {
+        var new_parts_name = $('#NEW_PARTS_NAME').val();
+        var params = $('form').serialize();
+        var jqXHR = $.ajax({
+            type: 'POST',
+            url: '/APP/PARTS_LIST/NEW/COMPLETE',
+            data: params
+        });
+        jqXHR.done(function(data) {
+            if (data == 2222) {
+                alert(new_parts_name + "は、既に使われています。");
+            } else {
+                $('table').html(data);
+                $('#info-msg').html(new_parts_name + "を追加しました。");
+            }
+        });
+        jqXHR.fail(function(data) {
+            alert("新規登録処理に失敗しました。");
+        });
+    }
+
+    //カテゴリ名変更
+    function editPartsCategory(id) {
+        var edit_category_name = $('#PARTS_CATEGORY_NAME_' + id).val();
+        var params = $('form').serialize();
+        var jqXHR = $.ajax({
+            type: 'POST',
+            url: '/APP/PARTS_CATEGORY/EDIT/COMPLETE',
+            data: {
+                PARTS_CATEGORY_ID: id,
+                PARTS_CATEGORY_NAME: edit_category_name
+            }
+        });
+        jqXHR.done(function(data) {
+            if (data == 2222) {
+                alert(new_category_name + "は、既に使われています。");
+            } else {
+                $('table').html(data);
+                $('#info-msg').html(edit_category_name + "を変更しました。");
+            }
+        });
+        jqXHR.fail(function() {
+            alert("更新処理に失敗しました。");
+        });
+    }
+
+    //カテゴリ名削除
+    function deletePartsCategory(id) {
+        var delete_category_name = $('#PARTS_CATEGORY_NAME_' + id).val();
+        var params = $('form').serialize();
+        var jqXHR = $.ajax({
+            type: 'POST',
+            url: '/APP/PARTS_CATEGORY/DELETE/COMPLETE',
+            data: {
+                PARTS_CATEGORY_ID: id,
+                PARTS_CATEGORY_NAME: delete_category_name
+            }
+        });
+        jqXHR.done(function(data) {
+            $('table').html(data);
+            $('#info-msg').html(delete_category_name + "を削除しました。");
+        });
+        jqXHR.fail(function() {
+            alert("削除処理に失敗しました。");
+        });
+ 
+    }
+
+</script>
