parts list delete

--- a/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
@@ -1,7 +1,7 @@
 <!--PARTS LISTS Records-->
 
 <!--RECORDS-->
-<tr>
+<tr id="edit-row-%2">
     <td>%1</td>
     <td>
         <span class="label label-default">%2</span>
@@ -32,7 +32,7 @@
         <a href="" class="btn btn-default" id="PARTS_EDIT_%2" onclick="editParts(%2); return false;" >EDIT</a>
     </td>
     <td>
-        <a class="btn btn-default" id="PARTS_DELETE_%2" onclick="deleteParts(%2);" >DELETE</a>
+        <a class="btn btn-default" id="PARTS_DELETE_%2" onclick="deleteParts(%2); return false;" >DELETE</a>
     </td>
 </tr>
 <!--RECORDS-->
