--- a/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_NEW.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_NEW.HTML
@@ -1,4 +1,4 @@
-<!--PARTS CATEGORY Records fpr NEW-->
+<!--PARTS CATEGORY Records for NEW-->
 <!--RECORDS-->
 <li name="PARTS_CATEGORY_NEW">
     <a id="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>
