--- a/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/CATEGORY_PAGE.HTML
@@ -1,7 +1,6 @@
-<!--PARTS CATEGORY Records fpr Page Filter-->
+<!--PARTS CATEGORY Records for Page Filter-->
 <!--RECORDS-->
 <li name="PARTS_CATEGORY_PAGE">
-    <a id="cat-list-0" onclick="categoryChoice(0,this); return false;" > </a>
     <a id="cat-list-%1" onclick="categoryChoice(%1,this); return false;" >%2</a>
 </li>
 <!--RECORDS-->
