PAGER アンダースコアエスケープ問題解消

--- a/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
@@ -10,6 +10,9 @@
         <div class="edit">
             <div class="form-group">
                 <div class="btn-group">
+                
+                <div class="btn-group">
+                    
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="parts_category" aria-expended="false">
                         <span class="caret"></span>
                     </button>
@@ -18,6 +21,7 @@
                     </ul>
                     <input type="text" name="PARTS_CATEGORY_NAME_%2" id="PARTS_CATEGORY_NAME_%2" value="%3" class="form-control" disabled />
                     <input type="hidden" name="PARTS_CATEGORY_NAME_HIDDEN_%2" id="PARTS_CATEGORY_NAME_HIDDEN_%2" value="%3" class="form-control" />
+                </div>
                 </div>
             </div>
         </div>
