--- a/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
@@ -48,6 +48,7 @@
         <div class="container" style="padding;20px;">
             <form class="form-inline form-horizontal" style="margin-bottom:15px;" action="/APP/PARTS_CATEGORY/LISTS/SHOW" method="GET">
 ###TABLE###
+###PAGER###
             </form>
         </div>
     </div>
