--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -1,5 +1,7 @@
 <!--STUFF SIGN IN Contents-->
-
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--<body>-->
     <div class="col-md-9">
 
         <!--Contents Header Title-->
@@ -71,3 +73,4 @@
     </div>
 
 <!--</body>-->
+<!--</html>-->
