--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -1,3 +1,5 @@
+<!--<!DOCTYPE html>-->
+<!--<html>-->
     <!--LEFT SIDE MENU-->
     <div class="col-md-3">
         <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1" style="margin-top:10px;">
@@ -5,10 +7,10 @@
             <div class="scrollable-menu">
                 <h3></h3>
                 <h3>Menu</h3>
-  			    <a class="###HIDDEN###" href="/APP/STUFF/SIGNIN/INPUT">
+  			    <a class="###SIGNIN_HIDDEN###" href="/APP/STUFF/SIGNIN/INPUT">
                     <i class="glyphicon glyphicon-log-in"> Sign-in</i>
                 </a>
-    			<a class="###HIDDEN###" href="/APP/STUFF/SIGNIN/OUT">
+    			<a class="###SIGNOUT_HIDDEN###" href="/APP/STUFF/SIGNIN/OUT">
                     <i class="glyphicon glyphicon-log-out"> Sign-out</i>
                 </a>
     			<a href="/APP/STUFF/NEW/INPUT">
@@ -17,19 +19,19 @@
     			<a href="/APP/STUFF/USERS/SHOW">
                     <i class="glyphicon glyphicon-user"> Stuff</i>
                 </a>
-    			<a href="#">
+    			<a href="/APP/ASSESSMENT/LISTS/SHOW">
                     <i class="glyphicon glyphicon-eye-open"> 査定</i>
                 </a>
-    			<a href="#">
+    			<a href="/APP/ACCEPT/LISTS/SHOW">
                     <i class="glyphicon glyphicon-thumbs-up"> 受入</i>
                 </a>
-    			<a href="#">
+    			<a href="/APP/STOCK/LISTS/SHOW">
                     <i class="glyphicon glyphicon-th"> 在庫</i>
                 </a>
-    			<a href="#">
+    			<a href="/APP/SALES/LISTS/SHOW">
                     <i class="glyphicon glyphicon-stats"> 売上</i>
                 </a>
-    			<a href="#">
+    			<a href="/APP/CUSTOMER/LISTS/SHOW">
                     <i class="glyphicon glyphicon-book"> 顧客</i>
                 </a>
     			<a href="#">
@@ -67,3 +69,4 @@
 
   		</nav>
     </div>
+<!--</html>-->
