Customer 追加& stuffリファクタ→stuff cp customer

--- a/APPLI/CUSTOMER/EDIT/HTML/COMPLETE.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/COMPLETE.HTML
@@ -4,8 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF REGISTRY <span class="label label-success">Complete</span></h1>
-		        <form action="/APP/STUFF/USERS/" method="GET">
+                <h1>Customer <span class="label label-success">Complete</span></h1>
+		        <form action="/APP/CUSTOMER/LISTS/" method="GET">
                     <div class="form-group">
 			            <h3>
                             <span class="glyphicon glyphicon-user"></span>
@@ -31,7 +31,7 @@
 			        <input type="hidden" name="STATUS" value="COMPLETE" />
 
                     <div class="form-group">
-                        <a class="btn btn-default" href="/APP/STUFF/USERS/SHOW">一覧へ</a>
+                        <a class="btn btn-default" href="/APP/CUSTOMER/LISTS/SHOW">一覧へ</a>
                         <a class="btn btn-default" href="/">TOPへ</a>
                     </div>
 		        </form>
