--- a/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
@@ -4,12 +4,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF EDIT<span class="label label-info">Confirm</span></h1>
-		        <form action="/APP/STUFF/EDIT/COMPLETE" method="POST">
+                <h1>Cusromer<span class="label label-info">Confirm</span></h1>
+		        <form action="/APP/CUSTOMER/EDIT/COMPLETE" method="POST">
                     <div class="form-group">
 			            <h2>
                             <span class="glyphicon glyphicon-user"></span>
-                            <span class="label label-default">###STUFF_ID_NOT_MATCH###</span>
+                            <span class="label label-default">###CUSTOMER_ID_NOT_MATCH###</span>
                         </h2>
                     </div>
 			        <br />
@@ -47,7 +47,7 @@
                     </div>
 
 			        <input type="hidden" name="STATUS" value="CONFIRM" />
-			        <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
+			        <input type="hidden" name="CUSTOMER_ID" value="###CUSTOMER_ID###" />
 
                     <div class="form-group">
 			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
