--- a/APPLI/CUSTOMER/EDIT/HTML/INPUT.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/INPUT.HTML
@@ -3,8 +3,8 @@
     <body>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF EDIT <span class="label label-default">Update</span></h1>
-		        <form action="/APP/STUFF/EDIT/CONFIRM" method="POST">
+                <h1>Customer <span class="label label-default">Update</span></h1>
+		        <form action="/APP/CUSTOMER/EDIT/CONFIRM" method="POST">
                     <div class="form-group">
                         <span class="label label-danger ###FAMILY_NAME_ERR###">FAMILY NAME was Invalid.</span>
                         <span class="label label-danger ###GIVEN_NAME_ERR###">GIVEN NAME was Invalid.</span>
@@ -42,7 +42,7 @@
                     </div>
 
 			        <input type="hidden" name="STATUS" value="INPUT" />
-			        <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
+			        <input type="hidden" name="CUSTOMER_ID" value="###CUSTOMER_ID###" />
 
                     <div class="form-group">
 			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
