--- a/APPLI/CUSTOMER/LISTS/HTML/SHOW.HTML
+++ b/APPLI/CUSTOMER/LISTS/HTML/SHOW.HTML
@@ -4,13 +4,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF <span class="label label-success"></span></h1>
-		        <form action="/APP/STUFF/USERS/" method="GET">
+                <h1>Customer <span class="label label-success"></span></h1>
+		        <form action="/APP/CUSTOMER/LISTS/" method="GET">
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>STUFF NO</th>
+                                <th>CUSTOMER NO</th>
                                 <th>FIRST NAME</th>
                                 <th>LAST NAME</th>
                                 <th>EMAIL</th>
