--- a/APPLI/CUSTOMER/DELETE/HTML/COMPLETE.HTML
+++ b/APPLI/CUSTOMER/DELETE/HTML/COMPLETE.HTML
@@ -4,9 +4,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF <span class="label label-success">Delete Complete</span></h1>
-                <h2>Deleted below stuff record.<h2>
-		        <form action="/APP/STUFF/USERS/" method="GET">
+                <h1>Customer <span class="label label-success">Delete Complete</span></h1>
+                <h2>Deleted below customer record.<h2>
+		        <form action="/APP/CUSTOMER/LISTS/" method="GET">
                     <div class="form-group">
                         <span class="label label-danger ">
                             下記の社員情報を削除しました。
@@ -43,7 +43,7 @@
 			        <input type="hidden" name="STATUS" value="COMPLETE" />
 
                     <div class="form-group">
-                        <a class="btn btn-default" href="/APP/STUFF/USERS/SHOW">一覧へ</a>
+                        <a class="btn btn-default" href="/APP/CUSTOMER/LISTS/SHOW">一覧へ</a>
                         <a class="btn btn-default" href="/">TOPへ</a>
                     </div>
 		        </form>
