--- a/APPLI/CUSTOMER/DELETE/HTML/CONFIRM.HTML
+++ b/APPLI/CUSTOMER/DELETE/HTML/CONFIRM.HTML
@@ -3,8 +3,8 @@
     <body>
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>STUFF <span class="label label-default">Delete</span></h1>
-		        <form action="/APP/STUFF/DELETE/COMPLETE" method="POST">
+                <h1>Customer <span class="label label-default">Delete</span></h1>
+		        <form action="/APP/CUSTOMER/DELETE/COMPLETE" method="POST">
                     <div class="form-group">
                         <span class="label label-danger ">
                             下記のスタッフ情報を削除します。宜しいでしょうか？
@@ -38,7 +38,7 @@
                     </div>
                     
                     <input type="hidden" name="METHOD" value="DELETE" />
-			        <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
+			        <input type="hidden" name="CUSTOMER_ID" value="###CUSTOMER_ID###" />
 
                     <div class="form-group">
 			            <input type="submit" name="SUBMIT" class="btn btn-primary btn-lg" />
